--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "editor.formatOnSave": true,
     "cSpell.ignoreWords": [
         "camelize",
+        "cardcaption",
         "ionicons"
     ]
 }
