added login and register screens, moved context

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "camelize",
         "cardcaption",
         "hearto",
-        "ionicons"
+        "ionicons",
+        "textbox"
     ]
 }
